--- a/app/templates/miniatures/add.html
+++ b/app/templates/miniatures/add.html
@@ -3,8 +3,8 @@
 <h2>Add Miniature</h2>
 <form method="post" class="row g-3">
     <div class="col-md-3">
-        <label class="form-label">Unique ID *</label>
-        <input name="unique_id" required class="form-control" placeholder="e.g. WHM-001" />
+        <label class="form-label">Unique ID (Integer) *</label>
+        <input name="unique_id" type="number" min="1" required class="form-control" placeholder="e.g. 1001" />
     </div>
     <div class="col-md-2">
         <label class="form-label">Prefix *</label>
