--- a/app/templates/miniatures/edit.html
+++ b/app/templates/miniatures/edit.html
@@ -3,8 +3,8 @@
 <h2>Edit Miniature</h2>
 <form method="post" class="row g-3">
     <div class="col-md-3">
-        <label class="form-label">Unique ID *</label>
-        <input name="unique_id" required class="form-control" value="{{ mini.unique_id }}" />
+        <label class="form-label">Unique ID (Integer) *</label>
+        <input name="unique_id" type="number" min="1" required class="form-control" value="{{ mini.unique_id }}" />
     </div>
     <div class="col-md-2">
         <label class="form-label">Prefix *</label>
