--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,6 +11,12 @@
                     <a class="nav-link" href="/miniatures">Inventory</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/forces">Forces</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/lance-templates">Lance Templates</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/miniatures/import">Import/Export</a>
                 </li>
                 <li class="nav-item">
