--- a/app/templates/forces/detail.html
+++ b/app/templates/forces/detail.html
@@ -14,6 +14,9 @@
         </small>
     </div>
     <div>
+        <a href="{{ url_for('forces.print_report', id=force.id) }}" class="btn btn-outline-primary" target="_blank">
+            <i class="fa-solid fa-print"></i> Print Report
+        </a>
         <a href="{{ url_for('forces.export', id=force.id) }}" class="btn btn-outline-success">
             <i class="fa-solid fa-download"></i> Export
         </a>
@@ -94,7 +97,7 @@
                     {% endfor %}
                 </ul>
                 <div class="mt-2">
-                    <small class="text-muted">{{ lance.miniatures | length }} / 4-6 miniatures</small>
+                    <small class="text-muted">{{ lance.miniatures | length }} miniatures</small>
                 </div>
             </div>
         </div>
