--- a/app/templates/lance_templates/list.html
+++ b/app/templates/lance_templates/list.html
@@ -3,9 +3,17 @@
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2 class="m-0">Lance Templates</h2>
-    <a href="{{ url_for('lance_templates.create') }}" class="btn btn-primary">
-        <i class="fa-solid fa-plus"></i> Create Template
-    </a>
+    <div>
+        <a href="{{ url_for('lance_templates.export') }}" class="btn btn-outline-success">
+            <i class="fa-solid fa-download"></i> Export All
+        </a>
+        <a href="{{ url_for('lance_templates.import_route') }}" class="btn btn-outline-secondary">
+            <i class="fa-solid fa-upload"></i> Import
+        </a>
+        <a href="{{ url_for('lance_templates.create') }}" class="btn btn-primary">
+            <i class="fa-solid fa-plus"></i> Create Template
+        </a>
+    </div>
 </div>
 
 <p class="text-muted">Pre-defined lance configurations for quick force building.</p>
